Fix tags flex wrap

--- a/styles.css
+++ b/styles.css
@@ -580,6 +580,7 @@ main {
 
 .item-tags-group {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
     margin-top: 0.5rem;
 }
